# android

./: .gitignore  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jnibridge.cpp  main.cpp
app/src/main/cpp/memory/: memory_system.cpp
app/src/main/java/com/calyx/mainapp/: MainActivity.java
app/src/main/res/values/: strings.xml
